<?xml version="1.0"?>
<package>
  <name>arg_distortion_correction</name>
  <version>1.0.0</version>
  <description>Lidar Distortion Correction</description>

  <maintainer email="tobias.renzler@tugraz.at">Tobias Renzler</maintainer>
  <maintainer email="markus.schratter@v2c2.at">Markus Schratter</maintainer>

  <url type="website">https://autonomousracing.ai/</url>
  
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>message_generation</run_depend>

</package>